examples/ill_formed/repeat_conditions.crn
crn = {
    conc[a, a0],
    conc[b, b0],
    step[{
        ld[a, atmp],
        ld[b, btmp],
        cmp[a,b]
    }],
    step[{
        ifGT[{ sub[atmp, btmp, a] }],
        ifGT[{ sub[btmp, atmp, b] }]
    }]
}